# hillm

./: Cargo.toml
src/: cost.rs  embedding.rs  error.rs  image.rs  lib.rs  streaming.rs  tokenizer.rs
src/auth/: mod.rs
src/client/: builder.rs  config.rs  config_file.rs  managed.rs  mod.rs
src/guardrail/: builtin.rs  cel.rs  mod.rs  registry.rs
src/http/: eventstream.rs  mod.rs  request.rs  retry.rs  stream.rs  transport.rs
src/observability/: mod.rs  usage.rs
src/provider/: anthropic.rs  bedrock.rs  common.rs  cost.rs  custom.rs  datadriven.rs  mod.rs  openai.rs  openai_compatible.rs  outbound_policy.rs
src/realtime/: mod.rs  openai.rs
src/tenant/: context.rs  etcd.rs  in_memory.rs  mod.rs  resolver.rs
src/tower/: budget.rs  cache.rs  cache_negative.rs  cache_opendal.rs  cache_policy.rs  cache_singleflight.rs  circuit.rs  cooldown.rs  cost.rs  error.rs  fallback.rs  fallback_chain.rs  guardrail.rs  hash.rs  health.rs  hedge.rs  hook.rs  hooks.rs  idempotency.rs  metrics.rs  mod.rs  rate_limit.rs  route_classify.rs  router.rs  service.rs  tracing.rs  types.rs
src/types/: audio.rs  chat.rs  common.rs  embedding.rs  file.rs  image.rs  mod.rs  model.rs  moderation.rs  ocr.rs  raw.rs  rerank.rs  search.rs
src/util/: bound.rs
src/vectorstore/: memory.rs  mod.rs  opendal.rs
