[package]
name = "hillm"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
bytes = "1.12.0"
futures-core = "0.3.32"
reqwest = { version = "0.13.4", default-features = false, features = [
    "json",
    "stream",
    "multipart",
    "form",
    "rustls",
] }
rustls = { version = "0.23.41", features = ["ring"] }
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serial_test = "3.5.0"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "1.1.2"
url = "2.5.8"
