[package]
name = "hillm"
version = "0.1.0"
edition = "2024"

[features]
default = ["default-http"]
default-http = [
    "dep:reqwest",
    "dep:rustls",
    "dep:tokio",
    "dep:tokio-util",
    "dep:memchr",
    "dep:gcp_auth",
]
tower = ["dep:tower", "dep:tower-http", "dep:futures-util", "tracing"]
tokenizer = ["dep:tokenizers"]

[dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
bytes = "1.12.0"
futures-core = "0.3.32"
futures-util = { version = "0.3.32", optional = true }
gcp_auth = { version = "0.12.7", optional = true }
memchr = { version = "2.8.2", optional = true }
pin-project-lite = "0.2.17"
reqwest = { version = "0.13.4", optional = true, default-features = false, features = [
    "json",
    "stream",
    "multipart",
    "form",
    "rustls",
] }
rustls = { version = "0.23.41", optional = true, features = ["ring"] }
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serial_test = "3.5.0"
thiserror = "2"
tokenizers = { version = "0.23.1", optional = true }
tokio = { version = "1", optional = true, features = ["full"] }
tokio-util = { version = "0.7.18", optional = true }
toml = "1.1.2"
tower = { version = "0.5.3", optional = true }
tower-http = { version = "0.7.0", optional = true }
tracing = { version = "0.1.44", optional = true }
url = "2.5.8"
