[package]
name = "hillm"
version = "0.1.0"
edition = "2024"

[features]
default-http = [
    "dep:reqwest",
    "reqwest/http2",
    "dep:rustls",
    "dep:tokio",
    "dep:tokio-util",
    "dep:memchr",
    "dep:gcp_auth",
]
wasm-http = ["dep:reqwest", "dep:memchr", "dep:gloo-timers", "dep:web-time"]
tracing = ["dep:tracing"]
tower = ["dep:tower", "dep:tower-http", "dep:futures-util", "tracing"]
opendal = ["dep:opendal", "tower"]
tokenizer = ["dep:tokenizers", "dep:hf-hub"]
otel = ["tracing", "dep:tracing-opentelemetry", "dep:opentelemetry"]
guardrail = ["dep:cel-interpreter"]
bedrock = ["default-http", "dep:aws-credential-types", "dep:aws-sigv4"]
http3 = ["default-http"]
etcd = ["dep:etcd-client", "dep:hex", "dep:sha2"]

default = ["default-http"]
full = [
    "default-http",
    "tower",
    "tracing",
    "otel",
    "tokenizer",
    "opendal",
    "bedrock",
    "etcd",
]


[dependencies]
arc-swap = "1.9.2"
async-trait = "0.1.89"
base64 = "0.22.1"
bytes = "1.12.0"
futures-core = "0.3.32"
futures-util = { version = "0.3.32", optional = true }
hf-hub = { version = "0.4", optional = true, default-features = false, features = [
    "tokio",
    "rustls-tls",
] }
gcp_auth = { version = "0.12.7", optional = true }
memchr = { version = "2.8.2", optional = true }
pin-project-lite = "0.2.17"
reqwest = { version = "0.13.4", optional = true, default-features = false, features = [
    "json",
    "stream",
    "multipart",
    "form",
    "rustls",
] }
rustls = { version = "0.23.41", optional = true, features = ["ring"] }
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serial_test = "3.5.0"
thiserror = "2"
tokenizers = { version = "0.23.1", optional = true, features = ["http"] }
tokio = { version = "1", optional = true, features = ["full"] }
tokio-util = { version = "0.7.18", optional = true }
toml = "1.1.2"
tower = { version = "0.5.3", optional = true, features = [
    "retry",
    "limit",
    "timeout",
    "buffer",
    "load-shed",
    "steer",
    "util",
    "discover",
    "ready-cache",
] }
tower-http = { version = "0.7.0", optional = true }
tracing = { version = "0.1.44", optional = true }
url = "2.5.8"
dashmap = "6.2.1"
rust_decimal = "1.42.1"
ahash = "0.8.12"
opendal = { version = "0.58.0", optional = true }
tracing-opentelemetry = { version = "0.33.0", optional = true }
opentelemetry = { version = "0.32.0", optional = true }
cel-interpreter = { version = "0.10.0", optional = true }
regex = "1.13.0"
web-time = { version = "1.1.0", optional = true }
gloo-timers = { version = "0.4.0", optional = true }
aws-credential-types = { version = "1.3.0", optional = true }
aws-sigv4 = { version = "1.5.1", optional = true }
etcd-client = { version = "0.19.0", optional = true }
hex = { version = "0.4.3", optional = true }
sha2 = { version = "0.11.0", optional = true }
